Fix wrapping of label for the button fragment. Add Loading, a loading idicator fragment.

--- a/jui-ui/src/main/resources/com/effacy/jui/ui/client/fragments/FragmentStyles.css
+++ b/jui-ui/src/main/resources/com/effacy/jui/ui/client/fragments/FragmentStyles.css
@@ -288,6 +288,7 @@
     cursor: pointer;
     border-radius: var(--juiButton-radius);
     display: inline-flex;
+    text-wrap-mode: nowrap;
     gap: 0.5em
 }
 
@@ -415,6 +416,12 @@
     background: #fff;
     opacity: 0.5;
     text-transform: uppercase;
+}
+
+.juiPersonWithAvatar h4 {
+    font-weight: 600;
+    color: var(--jui-text-header);
+    margin: 0;
 }
 
 /*************************************************
@@ -658,4 +665,19 @@
     line-height: 1.5;
     letter-spacing: 0.00938em;
     margin-bottom: 0.35em;
+}
+
+/*************************************************
+* Loading styles.
+*/
+.juiLoading {
+    animation: jui-animation-waiting 1s ease-in infinite;
+    height: 1em;
+    width: 100%;
+    border-radius: 3px;
+    background: #f9f9f9;
+}
+
+.juiLoading.juiLoading_dark {
+    background: #f3f3f3;
 }
